--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -76,9 +76,9 @@ import com.android.build.OutputFile
  */
 
 project.ext.react = [
-    entryFile: "index.js",
-    enableHermes: false,
-    bundleInRelease: false
+        entryFile      : "index.js",
+        enableHermes   : false,
+        bundleInRelease: false
 ]
 
 apply from: '../../node_modules/react-native-unimodules/gradle.groovy'
@@ -184,6 +184,11 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'androidx.navigation:navigation-fragment:2.0.0'
+    implementation 'androidx.navigation:navigation-ui:2.0.0'
     addUnimodulesDependencies()
 
     if (enableHermes) {
