--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@style/AppTheme">
+        <activity android:name=".MultiOffersScreenActivity"></activity>
         <activity android:name=".HomeScreenReactActivity" />
         <activity android:name=".PurelyAndroidActivity" />
         <activity
